network/ingress/yoger-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yoger-ingress
  annotations:
    kubernetes.io/ingress.class: "gce" 
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.global-static-ip-name: yoger-ip
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: gateway-cluster 
            port:
              number: 8080
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: gateway-cluster 
            port:
              number: 8080
      - path: /callback
        pathType: Prefix
        backend:
          service:
            name: gateway-cluster 
            port:
              number: 8080
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: gateway-cluster 
            port:
              number: 8080
      # Swagger
      - path: /swagger-ui
        pathType: Prefix
        backend:
          service:
            name: auth-cluster 
            port:
              number: 8080
      - path: /v3
        pathType: Prefix
        backend:
          service:
            name: auth-cluster 
            port:
              number: 8080

      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: order-cluster 
            port:
              number: 8080
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product-cluster 
            port:
              number: 8080
    
      # Legacy Frontend
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vue-frontend-service
            port:
              number: 80
